name:                scotty-register
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            http://github.com/halarnold2000/scotty-register#readme
license:             BSD3
license-file:        LICENSE
author:              halarnold2000
maintainer:          value
copyright:           value
category:            value
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Register
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , scotty
                     , wai
                     , text
                     , transformers
                     , http-types
  default-language:    Haskell2010

executable scotty-register-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -O2 -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , scotty-register
                     , transformers
                     , http-types
  default-language:    Haskell2010

test-suite scotty-register-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , scotty-register
                     , hspec
                     , hspec-wai
                     , hspec-wai-json
                     , aeson
  ghc-options:         -threaded -O2 -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/halarnold2000/scotty-register
